objects/B2B_SPC_Tax_Rates__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Not currently used</description>
        <inlineHelpText>Not currently used</inlineHelpText>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>B2B SPC Tax Rate</label>
    <listViews>
        <fullName>All_Rates</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>State_Province__c</columns>
        <columns>Active__c</columns>
        <columns>Default__c</columns>
        <columns>Rate__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rates</label>
    </listViews>
    <pluralLabel>B2B SPC Tax Rates</pluralLabel>
</CustomObject>